NV embed: fix tablet/desktop spacing, social view

--- a/src/css/embed.less
+++ b/src/css/embed.less
@@ -11,7 +11,7 @@
       margin: 22px 0;
     }
 
-    .extra-data-column & {
+    .extra-data-column& {
       @media @desktop {
         margin: 22px 0;
       }
@@ -29,7 +29,8 @@
   }
 }
 
-body.homepage {
+body.homepage,
+body.social {
   [data-theme-exclude="homepage"] {
     display: none !important;
   }
